--- a/_posts/2020-01-05-F-test.markdown.md
+++ b/_posts/2020-01-05-F-test.markdown.md
@@ -13,13 +13,7 @@ To investigate the significance of the difference between two variances consider
 ### Method:
 
 
-The samples of size n1 from Group 1 with values X1,X2,....Xn1 and size n2 from Group 2 with values Y1,Y2,...Yn2 with mean X (Group 1) and Y (Group 2). 
-
-The values of  variance S1 <sup>2</sup> and S2 <sup>2</sup>       were calculated from respective mean values.
-
-F ratio test statistic can be obtained by computing the ratio of the two variances S1 <sup>2</sup> and S2 <sup>2</sup>.
-
-F ratio follows F-distribution. F-distribution is a skewed distribution of Probabilities.
+The test statistic for samples of size n1 from Group 1 with values x1,x2,....n1 and size n2 from Group 2 with values y1,y2,...n2 with mean X (for Group 1) and  mean Y (for Group 2) calculated as following
 
 <?xml version="1.0" encoding="UTF-8"?>
 
@@ -55,7 +49,7 @@ F ratio follows F-distribution. F-distribution is a skewed distribution of Proba
    <mspace linebreak='newline' />
   <mspace linebreak='newline' />
   <mpadded lspace = "0.3em" width = "+0.6em">
-   <mo linebreak='newline' linebreakstyle='after'>and calculate Standard Deviation</mo>
+   <mo linebreak='newline' linebreakstyle='after'>and </mo>
    </mpadded>
    <mspace linebreak='newline' />
   <mi>S</mi>
@@ -138,6 +132,10 @@ F ratio follows F-distribution. F-distribution is a skewed distribution of Proba
  </semantics>
 </math>
 
+The values of  variance S1 <sup>2</sup> and S2 <sup>2</sup>       were calculated from respective mean values.
+
+F ratio test statistic can be obtained by computing the ratio of the two variances S1 <sup>2</sup> and S2 <sup>2</sup>.
+
 F-ratio is defined using following formula.
 
 <?xml version="1.0" encoding="UTF-8"?>
@@ -166,13 +164,15 @@ F-ratio is defined using following formula.
  </semantics>
 </math>
 
+F ratio follows F-distribution. F-distribution is a skewed distribution of Probabilities.
+
 ### When to you use F-test?
 
 Comparing two variances between two groups is useful in several cases
 
 - When you want to perform a two samples t-test to check the equality of the variances of the two samples
 
-- When you want to compare the variability of a new technique or result to an old one. Does the new method reduce the variability of the measure?
+- When you want to compare the variability of a new method to an old one. Does the new method reduce the variability of the measure?
 
 ### NULL Hypothesis
 
@@ -212,7 +212,6 @@ head(ToothGrowth)
 <caption>A data.frame: 6 × 3</caption>
 <thead>
 	<tr><th scope="col">len</th><th scope="col">supp</th><th scope="col">dose</th></tr>
-	<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
 </thead>
 <tbody>
 	<tr><td> 4.2</td><td>VC</td><td>0.5</td></tr>
@@ -285,7 +284,7 @@ The Pvalue is greater than 0.05 (5% level of significance). Therefore we accept 
 
 ### References
 
-https://en.wikipedia.org/wiki/F-test
-http://www.endmemo.com/program/R/ftest.php
-https://www.rdocumentation.org/packages/stats/versions/3.6.2/topics/var.test
+- https://en.wikipedia.org/wiki/F-test
+- http://www.endmemo.com/program/R/ftest.php
+- https://www.rdocumentation.org/packages/stats/versions/3.6.2/topics/var.test
 
