--- a/_posts/2020-01-05-F-test.markdown.md
+++ b/_posts/2020-01-05-F-test.markdown.md
@@ -166,6 +166,8 @@ F-ratio is defined using following formula.
 
 F ratio follows F-distribution. F-distribution is a skewed distribution of Probabilities.
 
+F ratio test assumes data follows a Normal Distribution.
+
 ### When to you use F-test?
 
 Comparing two variances between two groups is useful in several cases
