--- a/_posts/2020-01-12-SignTest.markdown.md
+++ b/_posts/2020-01-12-SignTest.markdown.md
@@ -87,10 +87,11 @@ The p-value 0.1797 is greater than 0.05 (5% significance level), do not reject N
 
 #### Example 2 Medians not equal to zero
 
-In Example 1 consider 2 samples A and B with median values not equal to zero. Assumptions of Example 1 are provided below
+In Example 2 consider 2 samples A and B with median values not equal to zero. Assumptions of Example 2 are provided below
 
 - Null Hypothesis : Difference in Median values between A and B samples are close to zero.
 - Alternate Hypothesis :  Difference in Median values between A and B samples not  equal to zero.
+
 ```R
 A <- c(443,421,436,376,458,408,422,431,459,369,360,431,403,436,376,370,443)
 ```
@@ -138,7 +139,7 @@ median(B)
 424
 
 
-Median value of A is 422 and median value of B is 424. Median difference is -19  as calculated by SIGN test is less than zero, which satisfies the Alternate hypothesis.  The p-value is 0.021, which is smaller than the alpha level of 0.05. We can reject the null hypothesis and say there is a significant difference.
+Median value of A is 422 and median value of B is 424. Median difference is -19  as calculated by SIGN test is less than zero, which satisfies the alternate hypothesis.  The p-value is 0.021, which is smaller than the alpha level of 0.05. We can reject the null hypothesis and say there is a significant difference.
 
 ### Example 3 one sample signed rank test 
 
