--- a/_posts/2020-01-12-SignTest.markdown.md
+++ b/_posts/2020-01-12-SignTest.markdown.md
@@ -85,7 +85,7 @@ median(TREATED)
 
 The p-value 0.1797 is greater than 0.05 (5% significance level), do not reject Null Hypothesis. Median value of CONTROL is 1.68 and Median value of TREATED is 1.06. Difference between median value of CONTROL and TREATED is 0.49 as calculated by SIGN test. The 0.49 is closer to zero which satisfies null hypothesis.
 
-#### Example 2 Medians not equal to zero
+#### Example 2 : Medians not equal to zero
 
 In Example 2 consider 2 samples A and B with median values not equal to zero. Assumptions of Example 2 are provided below
 
@@ -178,7 +178,7 @@ s = 7, p-value = 0.07031
 
 alternative hypothesis: true median is not equal to 3
 
-```
+
 
    ### Note the p-value in the output above
 
@@ -188,7 +188,7 @@ alternative hypothesis: true median is not equal to 3
 sample estimates:
 median of x 
 4
-
+```
 The pvalue 0.07 greater than 0.05 , do not reject null hypothesis. 
 
 ### Disadvantages
