--- a/_posts/2020-01-12-SignTest.markdown.md
+++ b/_posts/2020-01-12-SignTest.markdown.md
@@ -141,7 +141,7 @@ median(B)
 
 Median value of A is 422 and median value of B is 424. Median difference is -19  as calculated by SIGN test is less than zero, which satisfies the alternate hypothesis.  The p-value is 0.021, which is smaller than the alpha level of 0.05. We can reject the null hypothesis and say there is a significant difference.
 
-### Example 3 one sample signed rank test 
+### Example 3 : one sample signed rank test 
 
 One sample signed rank test with hypothesized median 3 instead of zero.
 
