--- a/_posts/2020-05-03-Seaborn.markdown.md
+++ b/_posts/2020-05-03-Seaborn.markdown.md
@@ -389,7 +389,7 @@ sns.catplot(data=titanic_df, y='age', col='deck', kind='bar')
 
 
 
-![png](output_19_1.png)
+![png](https://raw.githubusercontent.com/balakuntlaJayanth/Stats/master/images/May03_2020/output_19_1.png)
 
 
 ### Time-Series Data
