--- a/_posts/2020-08-23-Basic_R.md
+++ b/_posts/2020-08-23-Basic_R.md
@@ -534,21 +534,5 @@ print(productvector(A));
 
 
 
-```R
-df1 <- load(iris)
-```
-
-
-    Error in load(iris): bad 'file' argument
-    Traceback:
-
-
-    1. load(iris)
-
-    2. stop("bad 'file' argument")
-
-
-
-```R
-
-```
+### References
+- https://cran.r-project.org/doc/manuals/r-release/R-intro.html
